use absolute point values for huds